objects/Email_validation__c.object
<CustomObject>
    <fields>
        <fullName>Currency1__c</fullName>
        <label>Currency Field 1</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency2__c</fullName>
        <label>Currency Field 2</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTime1__c</fullName>
        <label>DateTime Field 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime2__c</fullName>
        <label>DateTime Field 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GeoLat1__c</fullName>
        <label>Geo Latitude 1</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLat2__c</fullName>
        <label>Geo Latitude 2</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLong1__c</fullName>
        <label>Geo Longitude 1</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLong2__c</fullName>
        <label>Geo Longitude 2</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number1__c</fullName>
        <label>Number Field 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number2__c</fullName>
        <label>Number Field 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent1__c</fullName>
        <label>Percent Field 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent2__c</fullName>
        <label>Percent Field 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <label>Text Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text2__c</fullName>
        <label>Text Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL1__c</fullName>
        <label>URL Field 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL2__c</fullName>
        <label>URL Field 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>companyName__c</fullName>
        <label>companyName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>text40__c</fullName>
        <label>text40</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Email_validation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>companyName__c</columns>
        <columns>phone__c</columns>
        <columns>text40__c</columns>
        <columns>text60__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>companyName__c</field>
            <operation>contains</operation>
            <value>shiva</value>
        </filters>
        <filters>
            <field>phone__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email_validation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email_validation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>phoneVal</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(ISBLANK(phone__c)),
  NOT(REGEX(phone__c, &quot;\\d{3}-\\d{3}-\\d{4}&quot;))
)</errorConditionFormula>
        <errorMessage>Phone must be in format 123-456-7890</errorMessage>
    </validationRules>
</CustomObject>